# MAX17843

./: CMakeLists.txt  RegisterClass.h  Registers.cpp  Registers.h  max17843.cpp  max17843.h
Inc/: RegisterClass.h  max17843.h
Src/: RegisterClass.cpp  Registers.cpp  max17843.cpp
scripts/: genearte_files.py  replacer.py
templates/: Registers.h.j2  singleton.j2
